--- a/source/_posts/刷题记录.md
+++ b/source/_posts/刷题记录.md
@@ -49,16 +49,8 @@ class Solution {
     }
 }
 ```
-执行用时 :
-9 ms
-, 在所有 Java 提交中击败了
-99.19%
-的用户
+执行用时 :9 ms, 在所有 Java 提交中击败了99.19%的用户
 
-内存消耗 :
-39.2 MB
-, 在所有 Java 提交中击败了
-5.14%
-的用户
+内存消耗 :39.2 MB, 在所有 Java 提交中击败了5.14%的用户
 
 **奇怪的是,第二种方法没有开新的String,只用了一个int,反而内存用的多...**
