--- a/source/_posts/端口1080占用的解决方法.md
+++ b/source/_posts/端口1080占用的解决方法.md
@@ -12,6 +12,14 @@ tags: 电脑的小问题解决方法
 
 2 查看pid,到任务管理器的详细信息页面,找到对应pid结束任务
 
-3 重启srr,提示已经运行了一份,到任务管理器按名称排序,结束任务
+这里去任务管理器太麻烦,直接cmd输入以下命令,如果这是个子进程的话需要加-f选项
+
+```
+taskkill /pid 9396 -t -f
+```
+
+其中9596是刚才看到的pid,改一下即可
+
+3 重启srr,提示已经运行了一份,在托盘退出,重启.如果不行的话,到任务管理器按名称排序,结束任务
 
 4 重启srr 
